--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.3",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.5.4",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
