--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.21.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.5.4",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
